# test-llm-with-crosswords

./: README.md  pyproject.toml
app/: solve_crossword.py
app/crosswords/: clues.json
